# elgamal_pell

./: .gitignore  CMakeLists.txt  benchmarks.c  fast.c  main.c  test.c
benchmarks/: benchmarks.ipynb  cmp.py
include/: ciphertext.h  elgamal_piso.h  elgamal_proj.h  fast_cipher.h  fast_keys.h  fast_piso.h  keys.h  params.h  pq_con.h  utils.h
results/: conic_benchmark_512_7680_100.csv  elgamal_piso_512_10  elgamal_piso_7680_10  elgamal_piso_7680_100  location.c  location.h  piso_benchmark_512_7680_100.csv  proj_benchmark_512_7680_100.csv  py_elgamal_benchmarks.csv
src/: ciphertext.c  dec.c  elgamal_piso.c  elgamal_proj.c  enc.c  fast_cipher.c  fast_keys.c  fast_piso.c  gen.c  keys.c  params.c  pq_con.c  utils.c
src/utils/: pq_con.c  tonelli_shanks.c  utils.c
test/: mod_more_test.c  test_piso.c  test_proj.c
